# MPIDemo

MPIServer/: CMakeLists.txt  mpi_client.cpp  mpi_client.h  mpi_server.cpp  mpi_server.h
